--- a/adminserver/Pipfile
+++ b/adminserver/Pipfile
@@ -12,6 +12,9 @@ SQLAlchemy = ">=2.0.41"
 quart-auth = ">=0.11.0"
 PyJWT = ">=2.10.1"
 cryptography = ">=45.0.5"
+aiosqlite = ">=0.21.0"
+quart-schema = ">=0.22.0"
+pydantic = ">=1.10.22"
 
 
 [dev-packages]
