--- a/locationserv/pipfile
+++ b/locationserv/pipfile
@@ -18,6 +18,8 @@ pytest-mock = ">=3.14.1"
 requests = ">=2.32.4"
 pytest-asyncio = ">=1.1.0"
 httpx = ">=0.28.1"
+pytest-cov = ">=6.0.0"
+mongomock = ">=4.0.0"
 
 [requires]
 python_version = "3.13"
