--- a/ui/apps/location/tsconfig.json
+++ b/ui/apps/location/tsconfig.json
@@ -1,5 +1,9 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "baseUrl": ".",
+    "outDir": "dist",
+    "rootDir": "src",
     "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
