--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "cypress": "^13.15.0",
+    "tsconfig-paths-webpack-plugin": "^4.2.0",
     "typescript": "^5.5.4"
   }
 }
