--- a/eostre_ui/package.json
+++ b/eostre_ui/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "ag-grid-community": "^34.1.2",
     "ag-grid-react": "^34.1.2",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "react": "19.1.0",
