--- a/eostre_ui/tsconfig.json
+++ b/eostre_ui/tsconfig.json
@@ -25,6 +25,6 @@
       "@ui-components/*": ["./packages/ui-components/src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "_next.config.ts"],
   "exclude": ["node_modules"]
 }
