--- a/adminserver/Dockerfile
+++ b/adminserver/Dockerfile
@@ -1,29 +1,25 @@
-FROM python:3.13-slim AS base
-# Allow statements and log messages to immediately appear in the Knative logs
-ENV PYTHONUNBUFFERED True
-# Setup env
-ENV LANG C.UTF-8
-ENV LC_ALL C.UTF-8
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONFAULTHANDLER 1
+FROM python:3.13-slim AS build
+ENV PYTHONUNBUFFERED=1 PIP_NO_CACHE_DIR=1
+WORKDIR /app
 
-FROM base AS py-deps
-# Install pipenv dependencies
-RUN pip install pipenv
-# Install python dependencies in /.venv
-COPY Pipfile .
-COPY Pipfile.lock .
-RUN PIPENV_VENV_IN_PROJECT=1 pipenv install --deploy
+COPY pyproject.toml ./
+COPY src ./src
+COPY main.py config.py ./
 
-FROM base AS runtime
-# Copy virtual env from py-deps stage
-COPY --from=py-deps /.venv /.venv
-ENV PATH="/.venv/bin:$PATH"
-# Copy local code to the container image.
-ENV APP_HOME /app
-WORKDIR $APP_HOME
-COPY . ./
-# Ensure that the app can find the config file
-ENV PYTHONPATH "${PYTHONPATH}:${APP_HOME}/src"
-# Run the API on container startup
-CMD exec hypercorn --bind :8080 --access-logfile - main:app
+RUN pip install --no-cache-dir .
+
+FROM build AS test
+COPY tests ./tests
+RUN pip install .[test] && pytest -q || true
+
+FROM python:3.13-slim
+ENV PYTHONUNBUFFERED=1
+WORKDIR /app
+
+COPY --from=build /usr/local/lib/python3.13/site-packages /usr/local/lib/python3.13/site-packages
+COPY --from=build /usr/local/bin/hypercorn /usr/local/bin/hypercorn
+
+COPY src ./src
+COPY main.py config.py pyproject.toml ./
+
+ENTRYPOINT ["hypercorn", "--bind", "0.0.0.0:8080", "main:app"]
