--- a/eostre_ui/package.json
+++ b/eostre_ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "clean": "rm -rf .next node_modules/.cache",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
