--- a/eostre_ui/package.json
+++ b/eostre_ui/package.json
@@ -18,7 +18,8 @@
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-json-view": "^1.21.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
