alembic migrations and basic updates. UI fixes tbd

--- a/adminserver/pyproject.toml
+++ b/adminserver/pyproject.toml
@@ -24,7 +24,7 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-test = ["pytest", "pytest-mock", "requests", "pytest-asyncio", "httpsx"]
+test = ["alembic","pytest", "pytest-mock", "requests", "pytest-asyncio", "httpsx"]
 
 [tool.setuptools]
 package-dir = {"" = "src"}
